# 2D-Raycaster

./: CMakeLists.txt  CPPLINT.cfg  README.md  main.cpp
.github/workflows/: build.yml  cpplint.yml
src/AreaSettingsDialog/: area_settings.h  area_settings_dialog.cpp  area_settings_dialog.h
src/Controller/: controller.cpp  controller.h
src/MainWindow/: main_window.cpp  main_window.h
src/PaintWidget/: paint_widget.cpp  paint_widget.h
src/Polygon/: polygon.cpp  polygon.h
src/Ray/: ray.cpp  ray.h
